--- a/Resources/views/Menu/menu.html.twig
+++ b/Resources/views/Menu/menu.html.twig
@@ -15,4 +15,10 @@
 {% endspaceless %}
 {% endblock %}
 
-{% block label %}{% if options.allow_safe_labels and item.getExtra('safe_label', false) %}{{ item.label|trans()|raw }}{% else %}{{ item.label|trans() }}{% endif %}{% endblock %}
+{% block label %}
+    {% if options.allow_safe_labels and item.getExtra('safe_label', false) %}
+        <span class="menu-item-parent">{{ item.label|trans()|raw }}</span>
+    {% else %}
+        <span class="menu-item-parent">{{ item.label|trans() }}</span>
+    {% endif %}
+{% endblock %}
