--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -30,7 +30,7 @@
     {% endblock head_script %}
 
     <title>{% block title %}Mopa Bootstrap Bundle{% endblock title %}</title>
-    {% block favicon %}<link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />{% endblock %}
+    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
     {% block head_bottom %}
     {% endblock head_bottom %}
 </head>
