--- a/Resources/views/base_less.html.twig
+++ b/Resources/views/base_less.html.twig
@@ -4,6 +4,7 @@
     {# Override this block to add your own files! #}
     {% stylesheets
         '@MopaBootstrapBundle/Resources/public/less/mopabootstrapbundle.less'
+        filter='less'
     %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
     {% endstylesheets %}
